Might have fixed the vertical swipe bug with overflow-y:auto

--- a/src/FeedCard/FeedCard.scss
+++ b/src/FeedCard/FeedCard.scss
@@ -104,9 +104,9 @@
 
 .feedcard {
 	font-family: 'Lato', 'Helvetica';
-	height: 100%;
+	height: 100vh;
+	overflow-y: auto;
 	position: relative;
-	transition: height 1s;
 
 	&::before {
 		content: "";
